fix: assign z-index to descendants to apply correctly gradient noise

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -62,6 +62,6 @@ body {
   box-sizing: border-box;
 }
 
-main > * > * {
+main > * * {
   z-index: 2;
 }
